fix framework and warnings for RelationTypeTest and make the tests pass